--- a/Project_4/css/style.css
+++ b/Project_4/css/style.css
@@ -198,6 +198,15 @@ h1, h2, h3, h4, h5, h6, figure {
   height: 500px;
   overflow-y: auto;
 }
+
+@media screen and (max-width: 768px) {
+  .code
+{
+  overflow-y: auto;
+}
+}
+
+
 .contract {
   margin-bottom: 50px;
 }
